--- a/index.css
+++ b/index.css
@@ -2,17 +2,93 @@
   box-sizing: border-box;
 }
 
+/*============ SAMPLE =======================
+html {
+  background: #9a9a9a;
+}
+
 body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.4),
+      rgba(255, 255, 255, 0)
+    ),
+    url(https://user-images.githubusercontent.com/30050423/61923414-6e594000-af53-11e9-824d-303d0d46b3ce.jpg);
+    object-fit: contain;
+  background-attachment: scroll;
+  color: darkslategray;
+}
+
+h1,
+h2,
+h3,
+h4,
+dl,
+p,
+li {
+  margin: 0;
+}
+
+h2 {
+  color: #434343;
+  text-shadow: 1px 1px 1px #eeeeee;
+  font-size: 17px;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+}
+
+h3,
+h4 {
+  color: #434343;
+  font-size: 16px;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+}
+
+h3:before {
+  content: "- ";
+}
+
+h4:before {
+  content: "- ";
+}
+
+h4 {
+  padding-left: 3px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0 0 15px 22px;
+}
+
+ul > li::before {
+  content: "\2022";
+  color: #cccccc;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+p {
+  margin-bottom: 5px;
+}
+
+/*=========== END OF SAMPLE ===============*/
+
+body,
+html {
   font-family: "Roboto", sans-serif;
-}
-
-button,
-input[type="text"] {
-  padding: 5px;
-}
-
-button:hover {
-  cursor: pointer;
+  margin: 0;
+  top: 0;
+  height: 100%;
+  background-color: gray;
 }
 
 ul {
@@ -25,14 +101,12 @@ li {
   padding: 10px;
 }
 
-li,
-img {
-  max-width: 500px;
-}
-
 .container {
-  max-width: 600px;
+  display: block;
+  max-width: 100%;
   margin: 0 auto;
+  background-color: gray;
+  min-height: 100%;
 }
 
 .error-message {
@@ -41,4 +115,191 @@ img {
 
 .hidden {
   display: none;
+}
+
+h2,
+h3 {
+  text-align: center;
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 1.2em;
+  width: 90%;
+}
+
+/*======= HEADER-SECTION ========*/
+header {
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0)
+  );
+  background-color: black;
+  height: 100%;
+  /*
+  background-position-x: 0%, 0%;
+  background-position-y: 0%, 0%;
+  background-attachment: scroll, scroll;
+  background-size: auto, auto;
+  background-size: cover;
+  background-position: 15% 0%;
+  background-attachment: scroll;
+  padding: 20px 0;
+  box-shadow: 0 0 10px black;*/
+}
+
+.welcomeImg {
+  background-image: url("https://user-images.githubusercontent.com/30050423/61923414-6e594000-af53-11e9-824d-303d0d46b3ce.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  min-height: 600px;
+}
+
+/*======= FORM-SECTION =========*/
+.divForm {
+  width: 50%;
+  float: right;
+  margin-right: 20px;
+}
+
+#js-form {
+  top: 100px;
+  padding: 3%;
+  background: white;
+  position: absolute;
+  margin-right: 30px;
+  max-width: 500px;
+}
+
+fieldset {
+  height: auto;
+}
+
+input[type="text"] {
+  display: block;
+  margin: 0 auto;
+  padding: 5px;
+  width: 90%;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 5px;
+  width: 90%;
+}
+button:hover {
+  cursor: pointer;
+  background: grey;
+  color: white;
+}
+
+/*======= ERROR MESSAGE-SECTION =========*/
+.errorMessages {
+  background: gray;
+}
+
+/*======= WEATHER-SECTION =========*/
+#getWeather,
+shareSection {
+  width: 100%;
+  max-height: 200px;
+  background: gray;
+}
+#getWeather p {
+  font-size: 0.8em;
+}
+.weatherBox {
+  width: 90%;
+  margin: 0 auto;
+}
+.days {
+  display: inline-flex;
+}
+
+.days > img {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/*======= RESULTBOX-SECTION =========*/
+.resultBox {
+  display: block;
+  margin-top: 0;
+  width: 99%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sectionBox {
+  margin: 0 auto;
+  overflow: scroll;
+}
+
+.Title {
+  width: 23.9%;
+  padding: 3px;
+  background: white;
+  text-align: center;
+  position: absolute;
+  margin-bottom: 20px;
+}
+
+.result {
+  padding-top: 24px;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+.apiImage {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#getTrails,
+#getSports,
+#getPlays,
+#getMusic {
+  display: inline-flex;
+  background: rgb(209, 209, 209);
+  max-width: 24%;
+  max-height: 550px;
+}
+
+/*======= FOOTER =========*/
+
+.bodyContainer {
+  padding-bottom: 50px;
+}
+
+.positionAbsolute {
+  position: absolute;
+}
+
+.shareSection {
+  display: inline-flex;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background: darkgrey;
+  padding-left: 1.04166666%;
+  padding-right: 1.04166666%;
+  font-size: 0.8em;
+  clear: both;
+}
+
+.footerText {
+  text-align: center;
+  margin-top: 3px;
+  padding-left: 29%;
+  padding-right: 3%;
+}
+
+.sharebuttons {
+  margin-top: 8px;
 }
