--- a/index.css
+++ b/index.css
@@ -88,7 +88,6 @@ html {
   margin: 0;
   top: 0;
   height: 100%;
-  background-color: gray;
 }
 
 ul {
@@ -118,7 +117,8 @@ li {
 }
 
 h2,
-h3 {
+h3,
+h4 {
   text-align: center;
   margin: 0 auto;
 }
@@ -203,12 +203,12 @@ button:hover {
 }
 
 /*======= WEATHER-SECTION =========*/
-#getWeather,
-shareSection {
+#getWeather {
   width: 100%;
   max-height: 200px;
-  background: gray;
+  background: white;
 }
+
 #getWeather p {
   font-size: 0.8em;
 }
@@ -216,8 +216,19 @@ shareSection {
   width: 90%;
   margin: 0 auto;
 }
+
+.getWeatherContainer {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .days {
   display: inline-flex;
+}
+
+.js-cityWeather {
+  padding: 5px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .days > img {
@@ -230,8 +241,14 @@ shareSection {
   display: block;
   margin-top: 0;
   width: 99%;
+  /*width: 100%;*/
   margin-left: auto;
   margin-right: auto;
+}
+
+.resultBox-innerContainer {
+  width: 99%;
+  margin: 0 auto;
 }
 
 .sectionBox {
@@ -242,18 +259,50 @@ shareSection {
 .Title {
   width: 23.9%;
   padding: 3px;
-  background: white;
+  background: rgb(58, 58, 58);
+  color: white;
   text-align: center;
   position: absolute;
   margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+h3 {
+  color: rgb(40, 76, 105);
+  text-transform: uppercase;
+  font-size: 1em;
+  border: thin solid rgb(209, 209, 209);
+  padding: 4px;
+}
+
+h3:hover {
+  background: rgb(236, 236, 236);
+  color: rgb(58, 58, 58);
+}
+
+.unit {
+  border: 0.5px solid rgb(138, 138, 138);
+  padding-top: 5px;
+}
+
+#results-getTrails a,
+#results-getSports a,
+#results-getPlays a,
+#results-getMusic a {
+  /*color: rgb(40, 76, 105);*/
+  text-decoration: none;
+}
+
+#results-getTrails a:hover,
+#results-getSports a:hover,
+#results-getPlays a:hover,
+#results-getMusic a:hover {
+  color: rgb(58, 58, 58);
+  text-decoration: none;
 }
 
 .result {
   padding-top: 24px;
-}
-
-h3 {
-  font-size: 1em;
 }
 
 .apiImage {
@@ -269,12 +318,13 @@ h3 {
   background: rgb(209, 209, 209);
   max-width: 24%;
   max-height: 550px;
+  margin: 0 auto;
 }
 
 /*======= FOOTER =========*/
 
 .bodyContainer {
-  padding-bottom: 50px;
+  padding-bottom: 0px;
 }
 
 .positionAbsolute {
