--- a/index.css
+++ b/index.css
@@ -2,92 +2,17 @@
   box-sizing: border-box;
 }
 
-/*============ SAMPLE =======================
-html {
-  background: #9a9a9a;
-}
-
-body {
-  margin: 0;
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  font-size: 15px;
-  background: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.4),
-      rgba(255, 255, 255, 0)
-    ),
-    url(https://user-images.githubusercontent.com/30050423/61923414-6e594000-af53-11e9-824d-303d0d46b3ce.jpg);
-    object-fit: contain;
-  background-attachment: scroll;
-  color: darkslategray;
-}
-
-h1,
-h2,
-h3,
-h4,
-dl,
-p,
-li {
-  margin: 0;
-}
-
-h2 {
-  color: #434343;
-  text-shadow: 1px 1px 1px #eeeeee;
-  font-size: 17px;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  margin: 0;
-}
-
-h3,
-h4 {
-  color: #434343;
-  font-size: 16px;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-}
-
-h3:before {
-  content: "- ";
-}
-
-h4:before {
-  content: "- ";
-}
-
-h4 {
-  padding-left: 3px;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0 0 15px 22px;
-}
-
-ul > li::before {
-  content: "\2022";
-  color: #cccccc;
-  display: inline-block;
-  width: 1em;
-  margin-left: -1em;
-}
-
-p {
-  margin-bottom: 5px;
-}
-
-/*=========== END OF SAMPLE ===============*/
-
 body,
 html {
   font-family: "Roboto", sans-serif;
   margin: 0;
   top: 0;
   height: 100%;
+  font-size: 17px;
+  color: #363b52;
+  scroll-behavior: smooth;
+  background-color: gray;
+  /*line-height: 1.5;*/
 }
 
 ul {
@@ -100,12 +25,17 @@ li {
   padding: 10px;
 }
 
+#scrollDownResults {
+  top: 0px;
+}
+
 .container {
+  top: 0px;
   display: block;
   max-width: 100%;
   margin: 0 auto;
   background-color: gray;
-  min-height: 100%;
+  /*min-height: 100%;*/
 }
 
 .error-message {
@@ -136,7 +66,7 @@ header {
     rgba(255, 255, 255, 0)
   );
   background-color: black;
-  height: 100%;
+  height: 90%;
   /*
   background-position-x: 0%, 0%;
   background-position-y: 0%, 0%;
@@ -155,14 +85,13 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  min-height: 600px;
+  height: 735px;
 }
 
 /*======= FORM-SECTION =========*/
 .divForm {
-  width: 50%;
-  float: right;
-  margin-right: 20px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 #js-form {
@@ -185,11 +114,16 @@ input[type="text"] {
   width: 90%;
 }
 
+form a {
+  text-decoration: none;
+  color: #363b52;
+}
+
 button {
   display: block;
   margin: 0 auto;
   padding: 5px;
-  width: 90%;
+  width: 100%;
 }
 button:hover {
   cursor: pointer;
@@ -202,8 +136,15 @@ button:hover {
   background: gray;
 }
 
+.bodyContainer {
+  top: 0;
+  height: 90%;
+}
+
 /*======= WEATHER-SECTION =========*/
 #getWeather {
+  padding-top: 5px;
+  text-align: center;
   width: 100%;
   max-height: 200px;
   background: white;
@@ -215,10 +156,12 @@ button:hover {
 .weatherBox {
   width: 90%;
   margin: 0 auto;
+  height: 200px;
+  overflow: hidden;
 }
 
 .getWeatherContainer {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -227,8 +170,8 @@ button:hover {
 }
 
 .js-cityWeather {
-  padding: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-top: 15px;
+  font-family: "Roboto";
 }
 
 .days > img {
@@ -237,7 +180,9 @@ button:hover {
 }
 
 /*======= RESULTBOX-SECTION =========*/
+
 .resultBox {
+  text-align: center;
   display: block;
   margin-top: 0;
   width: 99%;
@@ -257,13 +202,13 @@ button:hover {
 }
 
 .Title {
-  width: 23.9%;
-  padding: 3px;
+  width: 92%;
+  padding: 6px;
   background: rgb(58, 58, 58);
   color: white;
   text-align: center;
   position: absolute;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   text-transform: uppercase;
 }
 
@@ -282,7 +227,7 @@ h3:hover {
 
 .unit {
   border: 0.5px solid rgb(138, 138, 138);
-  padding-top: 5px;
+  padding-top: 15px;
 }
 
 #results-getTrails a,
@@ -314,11 +259,12 @@ h3:hover {
 #getSports,
 #getPlays,
 #getMusic {
-  display: inline-flex;
+  display: block;
   background: rgb(209, 209, 209);
-  max-width: 24%;
-  max-height: 550px;
+  max-width: 94%;
+  max-height: 450px;
   margin: 0 auto;
+  overflow: scroll;
 }
 
 /*======= FOOTER =========*/
@@ -332,24 +278,184 @@ h3:hover {
 }
 
 .shareSection {
-  display: inline-flex;
+  clear: both;
+  display: block;
+  margin: 0 auto;
   bottom: 0;
   width: 100%;
-  height: 50px;
   background: darkgrey;
   padding-left: 1.04166666%;
   padding-right: 1.04166666%;
-  font-size: 0.8em;
-  clear: both;
+  font-size: 0.7em;
 }
 
 .footerText {
-  float: right;
   margin-top: 3px;
-  padding-left: 19%;
+  text-align: center;
+  padding-left: 10%;
   padding-right: 3%;
 }
 
 .sharebuttons {
-  margin-top: 8px;
+  margin: 0 auto;
+  width: 50%;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+/*======@MEDIA QUERIES (max-with: 767px)=======*/
+@media only screen and (max-width: 767px) {
+  .welcomeImg {
+    height: 700px;
+    margin-bottom: 10px;
+  }
+}
+/*==============================================*/
+
+/*======@MEDIA QUERIES (min-width: 768px)=======*/
+@media only screen and (min-width: 768px) {
+  .divForm {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  #getWeather {
+    padding-top: 10px;
+    text-align: center;
+    width: 100%;
+    max-height: 200px;
+    background: white;
+  }
+
+  #getWeather p {
+    font-size: 0.8em;
+  }
+  .weatherBox {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .js-cityWeather {
+    padding: 5px;
+    font-family: "Roboto";
+  }
+
+  .getWeatherContainer {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .Title {
+    width: 23.9%;
+    padding: 3px;
+    background: rgb(58, 58, 58);
+    color: white;
+    text-align: center;
+    position: absolute;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+  }
+
+  h3 {
+    color: rgb(40, 76, 105);
+    text-transform: uppercase;
+    font-size: 1em;
+    border: thin solid rgb(209, 209, 209);
+    padding: 4px;
+  }
+
+  h3:hover {
+    background: rgb(236, 236, 236);
+    color: rgb(58, 58, 58);
+  }
+
+  .unit {
+    border: 0.5px solid rgb(138, 138, 138);
+    padding-top: 5px;
+  }
+
+  #results-getTrails a,
+  #results-getSports a,
+  #results-getPlays a,
+  #results-getMusic a {
+    /*color: rgb(40, 76, 105);*/
+    text-decoration: none;
+  }
+
+  #results-getTrails a:hover,
+  #results-getSports a:hover,
+  #results-getPlays a:hover,
+  #results-getMusic a:hover {
+    color: rgb(58, 58, 58);
+    text-decoration: none;
+  }
+
+  .result {
+    padding-top: 24px;
+  }
+
+  .apiImage {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  #getTrails,
+  #getSports,
+  #getPlays,
+  #getMusic {
+    display: inline-flex;
+    background: rgb(209, 209, 209);
+    max-width: 24%;
+    max-height: 550px;
+    margin: 0 auto;
+  }
+
+  .shareSection {
+    clear: both;
+    display: inline-flex;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background: darkgrey;
+    padding-left: 1.04166666%;
+    padding-right: 1.04166666%;
+    font-size: 0.7em;
+  }
+
+  .footerText {
+    float: right;
+    margin-top: 3px;
+    padding-left: 10%;
+    padding-right: 3%;
+  }
+  .sharebuttons {
+    width: 30%;
+    padding-top: 10px;
+  }
+}
+/*==============================================*/
+
+/*======@MEDIA QUERIES (min-width: 992px)=======*/
+@media only screen and (min-width: 992px) {
+  .divForm {
+    width: 50%;
+    float: right;
+    margin-right: 20px;
+  }
+
+  .footerText {
+    float: right;
+    margin-top: 3px;
+    padding-left: 15%;
+    padding-right: 3%;
+  }
+
+  .shareSection {
+    font-size: 0.8em;
+  }
+}
+/*==============================================*/
+
+/*======@MEDIA QUERIES (min-width: 1200px)=======*/
+@media only screen and (min-width: 1200px) {
 }
